# pyfasthash

./: .clang-format  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  wheels.yml
cmake/: compiler-features.cmake  farm.cmake  fnv.cmake  highway.cmake  smhasher.cmake  t1ha.cmake
pyhash/: __init__.py
src/: CityHash.h  FNV1.h  FarmHash.h  Halftime.h  Hash.cpp  Hash.h  Highway.h  Lookup3.h  MetroHash.h  Mum.h  MurmurHash.h  SpookyHash.h  SuperFastHash.h  T1ha.h  wyHash.h  xxHash.h
tests/: conftest.py  requirements.txt  test_cityhash.py  test_farmhash.py  test_fingerprint.py  test_highway.py
