[project]
name = "pyhash2"
version = "0.9.4"
requires-python = ">=3.7"
description = "A fork of Python Non-cryptographic Hash Library"
readme = "README.md"
authors = [
    { name = "Flier Lu", email = "flier.lu@gmail.com" }, # original project author
    { name = "nnnewb", email = "weak_ptr@outlook.com" },
]
license = { file = "LICENSE.txt" }
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Apache Software License',
    'Natural Language :: English',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: C++',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Internet',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
]
keywords = ['hash', 'hashing', 'fasthash']

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42",
    "wheel",
]

[tool.tox]
requires = [
    "tox>=4.19",
]
env_list = [
    "3.7",
    "3.8",
    "3.9",
    "3.10",
    "3.11",
    "3.12",
    "3.13"
]

[tool.tox.env_run_base]
deps = [
    "pytest >= 4.6",
    "pytest-cov >= 2.12",
    "pytest-benchmark >= 3.4",
    "codecov >= 2.1",
]
description = "run test under {base_python}"
commands = [
    [
        "pytest",
        "--benchmark-disable",
        "--cov=./",
        "-v",
        "tests"
    ],
]
